PharmaDemo/src/objects/Additional_Business_Plan_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>Business_Plan__c</fullName>
        <label>Business Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipName>R00Nj0000003oDM8EAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00Nj0000003oDM9EAM</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Influence__c</fullName>
        <label>Influence</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Influence_graphic__c</fullName>
        <formula>IMAGE( CASE( Influence__c, &quot;Positive&quot;, &quot;/img/samples/flag_green.gif&quot;, &quot;Neutral&quot;, &quot;/img/samples/flag_yellow.gif&quot;, &quot;Negative&quot;, &quot;/img/samples/flag_red.gif&quot;, &quot;/s.gif&quot;), &quot;priority flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Influence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opinion__c</fullName>
        <label>Opinion</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opinion_graphic__c</fullName>
        <formula>IMAGE( CASE( Opinion__c, &quot;Positive&quot;, &quot;/img/samples/flag_green.gif&quot;, &quot;Neutral&quot;, &quot;/img/samples/flag_yellow.gif&quot;, &quot;Negative&quot;, &quot;/img/samples/flag_red.gif&quot;, &quot;/s.gif&quot;), &quot;priority flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opinion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Chief Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust Governor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Board Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulary Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, IMAGE(&quot;/img/icon/tasks16.gif&quot;, &quot;View&quot;) ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Stakeholder</label>
    <nameField>
        <label>Stakeholder</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>